--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1473,7 +1473,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "1b183dcb-90bb-423f-ea4b-b6d0f9ccde74"
+        "outputId": "fa544eed-e644-4bf3-c7b3-ac2cfa7ee338"
       },
       "source": [
         "# import roc_curve() to plot a ROC curve. \n",
@@ -1506,7 +1506,7 @@
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
       ],
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1608,7 +1608,121 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r777_8YI2C0z",
+        "id": "YgJTIpwS3evD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# What are the main ways of evaluating a mutliclass classification problem?"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wV7vP2-X3Y5r",
+        "colab_type": "text"
+      },
+      "source": [
+        "Micro-averaging may be preferred in multilabel settings, including multiclass classification where a majority class is to be ignored.\n",
+        "\n",
+        "In multiclass classification task, the notions of precision, recall, and F-measures can be applied to each label independently. \n",
+        "* Note that if all labels are included, “micro”-averaging in a multiclass setting will produce precision, recall and  that are all identical to accuracy.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B7YuQ4393d_4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 867
+        },
+        "outputId": "7d0d4684-3ce0-432e-b2fa-b8ffee8e0242"
+      },
+      "source": [
+        "#Part 4\n",
+        "## Implement a baseline model and evaluation metric for the Boston dataset (regression)\n",
+        "load_boston()\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "boston_X_train,boston_X_test, boston_y_train, boston_y_test = train_test_split(class_X,class_y, test_size=0.5, random_state=1)\n",
+        "\n",
+        "from sklearn.dummy import DummyRegressor\n",
+        "# creates our dummy regressor and the value we pass in to the strategy\n",
+        "dummy_regr = DummyRegressor(strategy='mean')\n",
+        "boston1_Y = dummy_regr.fit(boston_X_train,boston_y_train) # train the model\n",
+        "print(boston1_Y)\n",
+        "X1_predict = dummy_regr.predict(boston_X_train) #predict\n",
+        "print(X1_predict)\n",
+        "boston_score = dummy_regr.score(boston_X_test,boston_y_test)\n",
+        "print(boston_score)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DummyRegressor(constant=None, quantile=None, strategy='mean')\n",
+            "[0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
+            " 0.61619718 0.61619718]\n",
+            "-0.002173953825086894\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T1Zrv8pt_0xS",
         "colab_type": "code",
         "colab": {}
       },
