--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1638,9 +1638,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 867
+          "height": 935
         },
-        "outputId": "7d0d4684-3ce0-432e-b2fa-b8ffee8e0242"
+        "outputId": "f8635343-256c-4f97-ab96-ce0f466baaec"
       },
       "source": [
         "#Part 4\n",
@@ -1655,16 +1655,20 @@
         "boston1_Y = dummy_regr.fit(boston_X_train,boston_y_train) # train the model\n",
         "print(boston1_Y)\n",
         "X1_predict = dummy_regr.predict(boston_X_train) #predict\n",
+        "print(\"\\n\")\n",
         "print(X1_predict)\n",
         "boston_score = dummy_regr.score(boston_X_test,boston_y_test)\n",
+        "print(\"\\n\")\n",
         "print(boston_score)"
       ],
-      "execution_count": 55,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "DummyRegressor(constant=None, quantile=None, strategy='mean')\n",
+            "\n",
+            "\n",
             "[0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
             " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
             " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
@@ -1713,6 +1717,8 @@
             " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
             " 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718 0.61619718\n",
             " 0.61619718 0.61619718]\n",
+            "\n",
+            "\n",
             "-0.002173953825086894\n"
           ],
           "name": "stdout"
