--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1684,7 +1684,7 @@
         "print('Decision Tree Score:\\n', DTscore)\n",
         "print(\"\\n\")\n",
         "\n",
-        "# Support Vector Machine Algorithm (SVM)\n",
+        "# SUPPORT VECTOR MACHINE (SVM)\n",
         "\n",
         "#Using SVC method of svm class to use Kernel SVM Algorithm\n",
         "from sklearn.svm import SVC\n",
