--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1795,6 +1795,8 @@
         "outputId": "3e40153a-8a67-4c67-8382-b5e290986769"
       },
       "source": [
+        "#Decision tree algorithm and plotting decision surface of decision tree\n",
+        "\n",
         "from sklearn.datasets import load_iris\n",
         "iris_data = load_iris()\n",
         "# features\n",
