--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1639,7 +1639,7 @@
         "\n",
         "\n",
         "\n",
-        "**DECISION TREE ALGORITHM (DT)**\n",
+        "> **DECISION TREE ALGORITHM (DT)**\n",
         "\n",
         "\n",
         "Decision tree classifiers are attractive models when focusing on interpretability. The model breaks down data by making decision based on asking a series of question. Based on features in our training dataset, the decision tree model learns a series of questions to infer the class labels of the dataset.\n",
@@ -1832,7 +1832,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 587
+          "height": 607
         },
         "outputId": "3e40153a-8a67-4c67-8382-b5e290986769"
       },
@@ -1955,7 +1955,18 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Excercise 5 - Regularization\n",
+        "\n",
+        "# For regularization in regression we instantiate new models\n",
+        "# Lasso regression is used for L1 Regularization \n",
+        "#import appropriate statement\n",
+        "from sklearn.linear_model import Lasso\n",
+        "\n",
+        "#create lasso regression with alpha value - this is our hyperparameter\n",
+        "regression = Lasso(alpha=0.5)\n",
+        "#fit the linear regression\n",
+        "model_L1 = regression.fit(class_X, class_y)\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
