--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "6qniekiBjsmH",
         "colab_type": "code",
-        "outputId": "2d371185-4dc8-488c-aa1f-ba862c164d86",
+        "outputId": "4f857ac0-569e-4905-86bc-3a3408b5248c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -53,7 +53,7 @@
         "print(class_X.shape)\n",
         "print(class_y.shape)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1051,7 @@
       "metadata": {
         "id": "gsv_ION1Zav2",
         "colab_type": "code",
-        "outputId": "a754da20-3011-490f-cbce-b5337e12e92a",
+        "outputId": "71b98d9d-8d40-4de6-9088-1a25e988af0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -1079,7 +1079,7 @@
         "print('Labels counts in y_test:', np.bincount(y_test))\n",
         "print('Percentage of class zeroes in y_test',np.round(np.bincount(y_test)[0]/len(y_test)*100))"
       ],
-      "execution_count": 15,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1726,7 @@
         "print('Decision Tree Score:\\n', DTscore)\n",
         "print(\"\\n\")\n",
         "\n",
-        "# SUPPORT VECTOR MACHINE (SVM)\n",
+        "# SUPPORT VECTOR MACHINE(SVM)\n",
         "\n",
         "#Using SVC method of svm class to use Kernel SVM Algorithm\n",
         "from sklearn.svm import SVC\n",
@@ -1952,7 +1952,11 @@
       "metadata": {
         "id": "D6smKPvKwjjT",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "668b1cc7-b9a6-41c6-9174-0c52188818e5"
       },
       "source": [
         "# Excercise 5 - Regularization\n",
@@ -1966,10 +1970,31 @@
         "regression = Lasso(alpha=0.5)\n",
         "#fit the linear regression\n",
         "model_L1 = regression.fit(class_X, class_y)\n",
-        "\n"
+        "#Ride regression is L2 Regularization\n",
+        "#import statement\n",
+        "from sklearn.linear_model import Ridge\n",
+        "#create ridge regression with an alpha value\n",
+        "regression = Ridge(alpha=0.5)\n",
+        "#Fit the linear regression\n",
+        "model_l2 = regression.fit(class_X, class_y)\n",
+        "\n",
+        "#Part 1\n",
+        "# Get a score for both the models. \n",
+        "# Compare the results and see if one type of regularization works better than another.\n",
+        "Lasso_score = model_L1.score(X_test, y_test)\n",
+        "print('Lasso Score:\\n', Lasso_score)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Lasso Score:\n",
+            " 0.6627498851239081\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
